fourth commit: add error message which appears when the filter finds nothing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,3 +91,10 @@ th {
     width: 300px;
   }
 }
+
+.error-message {
+  padding: 30px;
+  background: transparent;
+  text-align: center;
+  @extend %fontstyle;
+}
