--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -17,7 +16,6 @@ tr {
   background-color: #fff;
   color: #555555;
 }
-
 tr:nth-child(odd) {
   background-color: #f5f5f5;
 }
@@ -27,21 +25,11 @@ td, th {
   text-align: left;
 }
 
-th, .filter__search, .filter__reset, .error-message {
-  font-weight: 400;
-  font-size: 1.2em;
-}
-
-.filter__search, .filter__reset {
-  display: block;
-  padding: 0.8em 1.7em;
-  border-radius: 1em;
-  border: none;
-}
-
 th {
   background-color: #36304a;
   color: #fff;
+  font-weight: 400;
+  font-size: 1.2em;
 }
 
 img {
@@ -63,59 +51,43 @@ img {
 }
 
 .filter {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
+  padding-bottom: 10px;
 }
-
 .filter__search {
   width: 70%;
-  background: #ffffff33;
+  background: rgba(255, 255, 255, 0.2);
   color: #000;
+  font-weight: 400;
+  font-size: 1.2em;
+  display: block;
+  padding: 0.8em 1.7em;
+  border-radius: 1em;
+  border: none;
 }
-
-.filter__search::-webkit-input-placeholder {
-  color: #36304a;
-}
-
-.filter__search:-ms-input-placeholder {
-  color: #36304a;
-}
-
-.filter__search::-ms-input-placeholder {
-  color: #36304a;
-}
-
 .filter__search::placeholder {
   color: #36304a;
 }
-
 .filter__reset {
   width: 29%;
-  background: #ffffff94;
+  background: rgba(255, 255, 255, 0.5803921569);
   cursor: pointer;
+  font-weight: 400;
+  font-size: 1.2em;
+  display: block;
+  padding: 0.8em 1.7em;
+  border-radius: 1em;
+  border: none;
 }
 
 .loading-indicator {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
-
 .loading-indicator img {
   width: 300px;
 }
@@ -124,6 +96,8 @@ img {
   padding: 30px;
   background: transparent;
   text-align: center;
+  font-weight: 400;
+  font-size: 1.2em;
 }
 
 .tooltip {
@@ -131,4 +105,3 @@ img {
   visibility: hidden;
   border-radius: 5px;
 }
-/*# sourceMappingURL=style.css.map */
